--- a/style.css
+++ b/style.css
@@ -122,14 +122,24 @@ margin: 0 auto;
     width: 80%;
     margin: 0 auto;
     justify-content: right;
-    padding-top: 50px;
+    padding-top: 5px;
+}
+
+.third-section-para{
+    width: 80%;
+    margin: auto;
+    text-align: left;
+
 }
 .third-section-img img{
-    width: 700px;
-    margin-right: 85px;
-    display: inline-flex;
-    top: 0;
+    width: 75%;
+    padding: 5px; 
+    
+}
 
+#corona-font{
+    color: orange;
+    text-align: justify;
 }
 
 .parant-fourth{
@@ -139,10 +149,25 @@ margin: 0 auto;
     justify-content: right;
     padding-top: 50px;
 }
+
+.left-side-global{
+
+    width: 80%;
+    padding: 50px;
+}
 .para-global-font{
     font-size: 125%;
-    text-align: auto;
+    text-align: left;
+}
 
+#global-font{
+    font-size: 150%;
+    
+}
+
+.photo-trophy img{
+    width: 100%; 
+    height: 100%;
 }
 
 .more-info-btn{
@@ -160,6 +185,33 @@ margin: 0 auto;
     cursor: pointer;
 } 
 
+.third-section-corona{
+    text-align: center;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.third-section-corona-img img{
+    width: 50%; 
+    height: 50%;
+
+}
+
+.third-section-corona-para{
+    width: 100%;
+
+}
+#third-section-corona-header{
+    text-align: center;
+    font-size: 35px;
+}
+#last-corona{
+    color: orange;
+}
 #footer-add{
     background-color: black;
     color:rgb(132, 223, 223);
